[package]
name = "dama-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Сетевой стек
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "kad", "identify", "macros", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tor (Arti)
arti-client = { version = "0.10", features = ["tokio", "static", "native-tls", "full"] }

# База данных (упрощенная сборка для Windows)
rusqlite = { version = "0.29", features = ["bundled"] }

# Шифрование
aes-gcm = "0.10"
