[package]
name = "dama-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Сетевой стек
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "kad", "identify", "macros", "tokio", "floodsub"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Графический интерфейс
eframe = "0.22"

# Исправление ошибки компиляции окна на Windows (исправленные фичи)
winapi = { version = "0.3", features = ["winuser", "shobjidl", "winver", "errhandlingapi"] }

# Анонимность и база данных
arti-client = { version = "0.10", features = ["tokio", "static", "native-tls", "full"] }
rusqlite = { version = "0.29", features = ["bundled"] }

# Связь между сетевым ядром и графическим окном
crossbeam-channel = "0.5"

