[package]
name = "dama-core"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "kad", "identify", "macros", "tokio", "floodsub"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.22"
winapi = { version = "0.3", features = ["winuser", "shobjidl", "winver", "errhandlingapi"] }
rfd = "0.11"
arti-client = { version = "0.10.0", features = ["tokio", "static", "native-tls", "full"] }
rusqlite = { version = "0.29", features = ["bundled"] }
crossbeam-channel = "0.5"
chrono = "0.4"
base64 = "0.21"

